<resources>
    <string name="app_name">EduShare Android</string>
    <string name="title_home">Home</string>
    <string name="title_chat">Chat</string>
    <string name="title_notifications">Notificaciones</string>
    <string name="title_perfil">Perfil</string>
    <string name="title_usuarios">Usuarios</string>
    <string name="contraseña">contraseña</string>
    <string name="correo_gmail_com">correo@gmail.com</string>
    <!-- Títulos principales -->
    <string name="crear_cuenta_titulo">  Crear cuenta</string>
    <string name="datos_personales_titulo">  Datos personales</string>
    <string name="personalizacion_cuenta_titulo">  Personalización de la cuenta</string>
    <string name="notificaciones_titulo">  Notificaciones</string>

    <!-- Campos de formulario -->
    <string name="nombre_label">  Nombre(s)</string>
    <string name="nombre_hint">  Ingrese su nombre</string>
    <string name="primer_apellido_label">  Primer Apellido</string>
    <string name="primer_apellido_hint">  Ingrese su primer apellido</string>
    <string name="segundo_apellido_label">  Segundo Apellido</string>
    <string name="segundo_apellido_hint">  Ingrese su segundo apellido</string>
    <string name="correo_label">  Correo</string>
    <string name="correo_hint">  Ingrese su correo</string>
    <string name="usuario_label">  Nombre de usuario</string>
    <string name="usuario_hint">  Ingrese su nombre de usuario</string>
    <string name="contrasena_label">  Contraseña</string>
    <string name="contrasena_hint">  Ingrese su contraseña</string>
    <string name="confirmar_contrasena_label">  Confirmar contraseña</string>
    <string name="confirmar_contrasena_hint">  Por favor confirme su contraseña</string>
    <string name="nivel_educativo_label">  Nivel Educativo</string>
    <string name="nivel_educativo_hint">  Ingrese su nivel educativo</string>
    <string name="institucion_educativa_label">  Institución Educativa</string>
    <string name="institucion_educativa_hint">  Ingrese su Institución Educativa</string>
    <string name="carrera_label">  Carrera</string>
    <string name="carrera_hint">  Ingrese su carrera</string>
    <string name="materias_interes_label">  Materias de interés</string>
    <string name="materias_interes_hint">  Ingrese su materia de interés</string>

    <!-- Opciones de preferencias -->
    <string name="apuntes_opcion">  Apuntes</string>
    <string name="examenes_opcion">  Exámenes</string>
    <string name="resumenes_opcion">  Resúmenes</string>
    <string name="presentaciones_opcion">  Presentaciones</string>

    <!-- Notificaciones -->
    <string name="notificaciones_descripcion">Seleccione el tipo de notificaciones que desea recibir (Puede cambiar esta configuración más adelante en la opción "Ajustes")</string>
    <string name="notificaciones_documentos">Recibir notificaciones de nuevos documentos</string>
    <string name="notificaciones_seguidores">Recibir notificaciones cuando me sigan</string>
    <string name="notificaciones_semanales">Recibir notificaciones semanales</string>

    <!-- Botones -->
    <string name="cancelar_boton">Cancelar</string>
    <string name="crear_cuenta_boton">Crear cuenta</string>
    <string name="actualizar_cuenta_boton">Actualizar datos</string>
    <string name="subir_publicacion">Subir publicación</string>

    <!-- Mensajes de error/validación -->
    <string name="error_campo_requerido">Este campo es requerido</string>
    <string name="error_correo_invalido">Ingrese un correo válido</string>
    <string name="error_contrasenas_no_coinciden">Las contraseñas no coinciden</string>
    <string name="editar_perfil">Editar Perfil</string>
    <string name="ver_archivo">Ver archivo</string>
    <string name="programar_chat">Programar Chat</string>
    <string name="vista_del_chat">Vista del Chat</string>
    <string name="buscar_usuario">Buscar usuario...</string>
    <string name="logo_edushare">Logo EduShare</string>
    <string name="dejar_de_seguir">Dejar de seguir</string>
    <string name="seguir">Seguir</string>
    <string name="advertencia_inicarsesion">Debes iniciar sesión para ver esta sección.</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="informacion_personal">Información personal</string>
    <string name="mis_publicaciones">Mis publicaciones</string>
    <string name="mostrar_ocultar_contraseña">Mostrar/Ocultar contraseña</string>
    <string name="cambiar_contraseña">Cambiar Contraseña</string>
    <string name="por_favor_inicie_sesion_para_ver_sus_chats_agendados">Por favor inicie sesión para ver sus chats agendados</string>
    <string name="foto_de_perfil">Foto de perfil</string>
    <string name="foto_seleccionada">Foto seleccionada</string>
    <string name="seleccionar_imagen">Seleccionar imagen</string>
    <string name="bot_n_perfil">Botón perfil</string>
    <string name="por_favor_inicie_sesion">Por favor inicie sesión</string>
    <string name="nombre">Nombre:</string>
    <string name="usuario">Usuario:</string>
    <string name="nivel_educativo">Nivel educativo:</string>
    <string name="carrera">Carrera:</string>
    <string name="publicaciones">Publicaciones</string>
    <string name="titulo_del_chat">Título del chat</string>
    <string name="descripcion">Descripción</string>
    <string name="seleccionar_fecha">Seleccionar fecha</string>
    <string name="seleccionar_hora">Seleccionar hora</string>
    <string name="por_favor_inicie_sesion_para_buscar_usuarios">Por favor inicie sesión para buscar usuarios.</string>
    <string name="abrir">Abrir</string>
    <string name="descargar">Descargar</string>
    <string name="titulo_del_documento">Título del documento</string>
    <string name="descripcion_o_subtitulo">Descripción o subtítulo</string>
    <string name="_1_2k_vistas_23_p_ginas_1h_ago">1.2k Vistas · 23 Páginas · 1h ago</string>
    <string name="me_gusta">Me gusta</string>
    <string name="_0">0</string>
    <string name="escribe_un_comentario">Escribe un comentario...</string>
    <string name="enviar_comentario">Enviar comentario</string>
    <string name="ver_documento_completo">Ver documento completo</string>
    <string name="para_visualizar_por_completo_el_documento_es_necesario_crear_una_cuenta_o_iniciar_sesion">Para visualizar por completo el documento es necesario crear una cuenta o iniciar sesión.</string>
    <string name="escribe_tu_mensaje">Escribe tu mensaje</string>
    <string name="enviar_mensaje">Enviar mensaje</string>
    <string name="descripcion_del_chat">Descripción del chat</string>
    <string name="_12_05_2025_15_30">12/05/2025 15:30</string>
    <string name="avatar_de_usuario">Avatar de usuario</string>
    <string name="eliminar_comentario">Eliminar comentario</string>
    <string name="nombre_del_usuario">Nombre del usuario</string>
    <string name="hace_2_horas">Hace 2 horas</string>
    <string name="este_es_un_comentario_de_ejemplo_que_puede_ocupar_variasilineas_si_es_muy_largo">Este es un comentario de ejemplo que puede ocupar varias líneas si es muy largo.</string>
    <string name="nombre_mensaje">Pedro</string>
    <string name="mensaje_de_prueba">Mensaje de prueba</string>
    <string name="hace_2_minutos">Hace 2 minutos</string>
    <string name="hola_soy_yo">Hola, soy yo</string>
    <string name="_12_10">12:10</string>
    <string name="_3k_vistas_556_p_ginas_2h_ago">3k Vistas · 556 Páginas · 2h ago</string>
    <string name="nombre_usuario">Juan Pérez López</string>
    <string name="universidad_nacional">Universidad Nacional</string>
    <string name="bienvenido_a_edushare">¡Bienvenido a Edushare!</string>
    <string name="ingrese_correo_o_usuario">Ingrese correo o usuario:</string>
    <string name="usuario123_o_correo_gmail_com">usuario123 o correo@gmail.com</string>
    <string name="ingrese_su_contraseña">Ingrese su contraseña:</string>
    <string name="olvid_su_contraseña">¿Olvidó su contraseña?</string>
    <string name="registrarse">Registrarse</string>
    <string name="iniciar_sesion">Iniciar Sesion</string>
    <string name="ingrese_su_correo">Ingrese su correo:</string>
    <string name="codigo">Código</string>
    <string name="codigo_contraseña">*****</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="recuperar_contraseña">Recuperar contraseña</string>
    <string name="nueva_contraseña">Nueva Contraseña</string>
    <string name="volver">Volver</string>
    <string name="ingrese_codigo_y_nueva_contraseña">Ingrese código y nueva contraseña</string>
    <string name="aun_no_has_subido_publicaciones">Aún no has subido publicaciones.</string>
    <string name="correo">Correo</string>
    <string-array name="niveles_educativos">
        <item>Seleccione su nivel educativo</item>
        <item>Preparatoria</item>
        <item>Universidad</item>
    </string-array>
    <string name="informacion_contacto">Información de Contacto</string>
    <string name="informacion_academica">Información Académica</string>
    <string name="seguidores">Seguidores</string>
    <string name="siguiendo">Siguiendo</string>
    <string name="inspira_con_tu_contenido">Inspira con tu contenido: súbelo ahora</string>
    <string name="titulo">Título</string>
    <string name="escribe_un_titulo">Escribe un título</string>
    <string name="contenido">Contenido</string>
    <string name="descripcion_contenido">Escribe un resumen rápido: ¿De qué se trata? ¿Dónde se originó? ¿Quién podría encontrarlo útil?</string>
    <string name="categoria">Categoría</string>
    <string name="rama">Rama</string>
    <string name="subir_archivo_pdf">Subir archivo PDF</string>
    <string name="haz_clic_o_arrastra_para_subir">Haz clic o arrastra aquí para subir tu PDF</string>
    <string name="subir">Subir</string>
    <string name="materia">Materia</string>
    <string name="archivo_subido">Archivo subido:</string>
    <string name="vista_previa_de_portada">Vista previa de portada:</string>
    <string name="vista_previa_del_documento">Vista previa del documento</string>
    <string name="estado">Estado</string>
    <string name="comentario">Comentario</string>
    <string name="no_hay_resultados">No se encontraron publicaciones</string>
    <string name="selecciona_categoria">Selecciona categoría</string>
    <string name="selecciona_rama">Selecciona rama</string>
    <string name="selecciona_materia">Selecciona materia</string>
    <string name="error_materia">Error</string>
    <string name="sesion_caducada">Sesión caducada</string>
    <string name="caduco_la_sesion">Tu sesión ha caducado. Inicia sesión nuevamente. Mientras tanto, puedes seguir explorando los documentos.</string>
    <string name="entendido">Entendido</string>
    <string name="sesion_expirada">SESION_EXPIRADA</string>
    <string name="a_n_no_has_subido_publicaciones">Aún no has subido publicaciones</string>
    <string name="guardar_chat">Guardar Chat</string>
</resources>