<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.edushareandroid.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_verArchivo"
            app:destination="@id/navigation_verArchivo" />
    </fragment>

    <fragment
        android:id="@+id/navigation_chat"
        android:name="com.example.edushareandroid.ui.chat.ChatFragment"
        android:label="@string/title_chat"
        tools:layout="@layout/fragment_chat" >
        <action
            android:id="@+id/action_navigation_chat_to_programarChatFragment"
            app:destination="@id/programarChatFragment" />
        <action
            android:id="@+id/action_navigation_chat_to_vistaChatFragment"
            app:destination="@id/vistaChatFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_usuarios"
        android:name="com.example.edushareandroid.ui.usuarios.UsuariosFragment"
        android:label="@string/title_usuarios"
        tools:layout="@layout/fragment_usuarios">
        <action
            android:id="@+id/action_navigation_usuarios_to_perfilUsuarioFragment"
            app:destination="@id/perfilUsuarioFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.edushareandroid.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_perfil"
        android:name="com.example.edushareandroid.ui.perfil.PerfilFragment"
        android:label="@string/title_perfil"
        tools:layout="@layout/fragment_perfil">

        <action
            android:id="@+id/action_navigation_perfil_to_editarPerfilFragment"
            app:destination="@id/navigation_editarPerfil" />
        <action
            android:id="@+id/action_navigation_perfil_to_navigation_verArchivo"
            app:destination="@id/navigation_verArchivo" />
    </fragment>

    <fragment
        android:id="@+id/navigation_editarPerfil"
        android:name="com.example.edushareandroid.ui.editarperfil.EditarPerfilFragment"
        android:label="@string/editar_perfil"
        tools:layout="@layout/fragment_editarperfil"/>

    <fragment
        android:id="@+id/navigation_verArchivo"
        android:name="com.example.edushareandroid.ui.verarchivo.VerArchivoFragment"
        android:label="@string/ver_archivo"
        tools:layout="@layout/fragment_verarchivo"/>

    <fragment
        android:id="@+id/programarChatFragment"
        android:name="com.example.edushareandroid.ui.chat.ProgramarChatFragment"
        android:label="@string/programar_chat"
        tools:layout="@layout/fragment_programarchat" />

    <fragment
        android:id="@+id/vistaChatFragment"
        android:name="com.example.edushareandroid.ui.chat.VistaChatFragment"
        android:label="@string/vista_del_chat"
        tools:layout="@layout/fragment_vistachat">
        <argument android:name="titulo" app:argType="string" />
        <argument android:name="descripcion" app:argType="string" />
        <argument android:name="fecha" app:argType="string" />
        <argument android:name="hora" app:argType="string" />
        <argument android:name="usuario" app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/perfilUsuarioFragment"
        android:name="com.example.edushareandroid.ui.usuarios.PerfilUsuarioFragment"
        android:label="Usuario"
        tools:layout="@layout/fragment_perfilusuario">
        <action
            android:id="@+id/action_perfilUsuarioFragment_to_navigation_verArchivo"
            app:destination="@id/navigation_verArchivo" />
    </fragment>

</navigation>